--- a/HomeWork2/app/src/main/AndroidManifest.xml
+++ b/HomeWork2/app/src/main/AndroidManifest.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.haihm.drawbackground">
-
-    <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET" />
+    package="com.example.haihm.homework2">
 
     <application
         android:allowBackup="true"
@@ -21,9 +16,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DrawWhiteBackgroundActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            ></activity>
     </application>
 
 </manifest>
