--- a/Project1/DrawBackground/app/src/main/AndroidManifest.xml
+++ b/Project1/DrawBackground/app/src/main/AndroidManifest.xml
@@ -23,8 +23,14 @@
             </intent-filter>
         </activity>
         <activity android:name=".DrawWhiteBackgroundActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            ></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <provider
+            android:authorities="${applicationId}.provider"
+            android:name="android.support.v4.content.FileProvider"
+            android:grantUriPermissions="true">
+            <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths"/>
+        </provider>
     </application>
 
 </manifest>
