--- a/Project2_ReadBook/app/src/main/AndroidManifest.xml
+++ b/Project2_ReadBook/app/src/main/AndroidManifest.xml
@@ -16,9 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.DescriptionActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            ></activity>
+        <activity
+            android:name=".activity.DescriptionActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".activity.ReadingActivity"></activity>
     </application>
 
 </manifest>
