--- a/Project3/app/build.gradle
+++ b/Project3/app/build.gradle
@@ -31,4 +31,9 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'org.greenrobot:eventbus:3.1.1'
+    compile 'jp.wasabeef:picasso-transformations:2.1.2'
+    compile 'jp.wasabeef:recyclerview-animators:2.2.7'
+    compile 'com.wang.avi:library:2.1.3'
 }
