--- a/Project3/app/build.gradle
+++ b/Project3/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'jp.wasabeef:recyclerview-animators:2.2.7'
     compile 'com.wang.avi:library:2.1.3'
     compile 'com.github.mkaflowski:HybridMediaPlayer:1.4.2'
+    compile 'com.mani:ThinDownloadManager:1.3.0'
 }
